# opengl-notes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
assets/shaders/: basic.shader  batch.shader
src/: main.cpp
src/learn_opengl/: main.cpp
src/the_cherno/: main.cpp
src/the_cherno/include/: index_buffer.h  renderer.h  shader.h  test.h  test_batch_render.h  test_texture2d.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
src/the_cherno/src/: index_buffer.cpp  main.cpp  rederer.cpp  shader.cpp  test.cpp  test.h  test_batch_render.cpp  test_clear_color.cpp  test_clear_color.h  test_texture2d.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
